[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_03/Pawn_03_Part_Body.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_03/Pawn_03_Part_Head.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_03/Pawn_03_Part_Small_Wheel_02.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_03/Pawn_03_Part_Small_Wheel_01.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_03/Pawn_03_Part_Face_01.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_03/Pawn_03_Part_Big_Wheel_02.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Pawns/Pawn_03/Pawn_03_Part_Face_02.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Pawns/Pawn_03/Pawn_03_Part_Big_Wheel_01.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Pawns/Pawn_03/Pawn_03_Part_Big_Wheel_03.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Pawns/Pawn_03_Parts/Pawn_03_Pic.gd" type="Script" id=10]
[ext_resource path="res://Sprites/Pawns/Pawn_03/Pawn_03_Part_Arm.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.5
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_03_Part_Big_Wheel_01/Pawn_03_Part_Big_Wheel_02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_03_Part_Big_Wheel_01/Pawn_03_Part_Big_Wheel_03:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_03_Part_Small_Wheel_02/Pawn_03_Part_Small_Wheel_01:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pawn_03_Part_Body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.24 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -18 ), Vector2( 1, -17 ) ]
}

[node name="Pawn_03_Pic" type="Node2D"]
script = ExtResource( 10 )

[node name="Pawn_03_Part_Big_Wheel_01" type="Sprite" parent="."]
position = Vector2( 0, -15 )
texture = ExtResource( 8 )
hframes = 5

[node name="Pawn_03_Part_Big_Wheel_02" type="Sprite" parent="Pawn_03_Part_Big_Wheel_01"]
texture = ExtResource( 6 )
hframes = 5
frame = 2

[node name="Pawn_03_Part_Big_Wheel_03" type="Sprite" parent="Pawn_03_Part_Big_Wheel_01"]
texture = ExtResource( 9 )
hframes = 5
frame = 2

[node name="Pawn_03_Part_Small_Wheel_02" type="Sprite" parent="."]
position = Vector2( 21, -6 )
texture = ExtResource( 3 )
hframes = 3

[node name="Pawn_03_Part_Small_Wheel_01" type="Sprite" parent="Pawn_03_Part_Small_Wheel_02"]
texture = ExtResource( 4 )
hframes = 3

[node name="Pawn_03_Part_Body" type="Sprite" parent="."]
position = Vector2( 1, -17.097 )
texture = ExtResource( 1 )
hframes = 3

[node name="Pawn_03_Part_Arm" type="Sprite" parent="Pawn_03_Part_Body"]
position = Vector2( 12, -6 )
texture = ExtResource( 11 )
hframes = 3
frame = 2

[node name="Pawn_03_Part_Head" type="Sprite" parent="."]
position = Vector2( 0, -38 )
texture = ExtResource( 2 )
hframes = 2

[node name="Pawn_03_Part_Face_01" type="Sprite" parent="Pawn_03_Part_Head"]
texture = ExtResource( 5 )
hframes = 4
frame = 2

[node name="Pawn_03_Part_Face_02" type="Sprite" parent="Pawn_03_Part_Head"]
texture = ExtResource( 7 )
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
